# genai-data-extraction

./: .gitignore  README.md  generate_accident_emails.py  pyproject.toml
.devcontainer/: devcontainer.json
data/: README.md  audit-questions.docx  customer_service_call_reports.json  customer_support_call.m4a
data/accident_reports/: accident_report_01.eml  accident_report_02.eml  accident_report_03.eml  accident_report_04.eml  accident_report_05.eml  accident_report_06.eml  accident_report_07.eml  accident_report_08.eml  accident_report_09.eml  accident_report_10.eml  accident_report_11.eml  accident_report_12.eml  accident_report_13.eml  accident_report_14.eml  accident_report_15.eml  accident_report_16.eml  accident_report_17.eml  accident_report_18.eml  accident_report_19.eml  accident_report_20.eml  accident_report_21.eml  accident_report_22.eml  accident_report_23.eml  accident_report_24.eml  accident_report_25.eml
notebooks/: annual_report.ipynb  annual_report_audit.ipynb  customer_support.ipynb  customer_support_calls.ipynb  invoice.ipynb  menu_card.ipynb  text_to_table.ipynb
tests/: test_project_setup.py
