[project]
name = "genai-extraction-examples"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-cloud-aiplatform>=1.82.0",
    "instructor[vertexai]>=1.7.2",
    "pandas>=2.2.3",
    "pillow>=11.1.0",
    "tabulate>=0.9.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pytest>=8.3.5",
]
